# trendy-cli

./: Cargo.toml  LICENSE  README.md
src/: config.rs  fetch.rs  main.rs
src/fetch/: ai.rs  hn.rs  rd.rs
