[package]
name = "trendy-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
