[package]
name = "trendy-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
dirs = "5"
bytes = "1"
